syntax = 'proto3';

package calculator;

option java_package = "com.proto.calculator";
option java_multiple_files = true;

message SumRequest {
  int32 first = 1;
  int32 second = 2;
}

message SumResponse {
  int32 sum = 1;
}

message PrimeNumberDecompositionRequest {
  int32 number = 1;
}

message PrimeNumberDecompositionResponse {
  int32 prime_factor = 1;
}

service CalculatorService {
  // Unary
  rpc sum(SumRequest) returns (SumResponse) {};

  // Server Streaming
  rpc decomposePrimeNumber(PrimeNumberDecompositionRequest) returns (stream PrimeNumberDecompositionResponse) {};
}